# pheonix

./: .gitignore  CMakeLists.txt  README.md
app/: example.cpp  lexer_example.cpp  pheonix.cpp
doc/: dokumentacja_wstepna.md  examples.txt
doc/poprawione/: comments.txt  functions.txt  if_expression.txt  loop.txt  math.txt  shadowing.txt  structs.txt  variables.txt
docs/: dokumentacja_koncowa.md  dokumentacja_wstepna.md  pheonix.ebnf  tokens.md
inc/: ast_view.hpp  context.hpp  evaluator.hpp  exception.hpp  helpers.hpp  lexer.hpp  node.hpp  object.hpp  operator_visitor.hpp  parser.hpp  repl.hpp  token.hpp  token_type.hpp  types.hpp  visitor.hpp
src/: ast_view.cpp  context.cpp  evaluator.cpp  exception.cpp  helpers.cpp  lexer.cpp  my-language.cpp  node.cpp  object.cpp  operator_visitor.cpp  parser.cpp  repl.cpp  token.cpp  types.cpp  visitor.cpp
tests/: test_evaluator.cpp  test_lexer.cpp  test_parser.cpp
